--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,12 @@
 logo: # add logo name
-title: İnciBaba TV Üniteleri
+title: Bef - Enjoy Freedom
 description: > # this means to ignore newlines until "baseurl:"
-  Beğendiğiniz herhangi bir TV ünitesini yapabilirim.
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
 permalink: ':title/'
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "incibaba.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/bef" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Banner settings
 video: mountains.mp4 # add banner video. Add your video file to the folder video
@@ -15,9 +17,9 @@ banner-desc: # add banner description
 author-pic: face.jpg # your photo
 author-name: # your name
 about-author: # about author
-email: 008incibaba@gmail.com # your email
-phone: +90 (543)-366-1117 # your pnone number
-website: https://incibaba.github.io # you website
+email: your-email@domain.com # your email
+phone: (496)-169-6557 # your pnone number
+website: https://dwayne.example.com # you website
 
 # Social link
 google_url:    # add url link
@@ -26,10 +28,9 @@ instagram_url: # add url link
 pinterest_url: # add url link
 dribbble_url:  # add url link
 facebook_url:  # add url link
-whatsapp_url:  # add url link
 
 # Disqus
-discus_identifier: # add your discus identifier.  Not your username.  To get this, register your forum here with a unique ID: https://disqus.com/admin/create/
+discus_identifier: mr-brown # add your discus identifier.  Not your username.  To get this, register your forum here with a unique ID: https://disqus.com/admin/create/
 
 # Newsletter
 mailchimp: # add your MailChimp form identifier. For example - blogenjoyfreedom.us16.list-manage.com/subscribe/post?u=cd56155d76ddeeb4c0bc4d080&amp;id=7a526cd13e
